--- a/src/pages/monsters/reports/[...slug].astro
+++ b/src/pages/monsters/reports/[...slug].astro
@@ -4,25 +4,25 @@ import MarkdownPostLayout from '../../../layouts/MarkdownPostLayout.astro';
 
 let { slug } = Astro.params;
 if (slug === undefined) {
-    console.log(`in slug file, slug was undefined`)
-    slug = 'monsters/index';
+    console.log(`in reports slug file, slug was undefined`)
+    slug = 'index';
 } else {
-    slug = 'monsters/' + slug;
-    console.log(`slug is ${slug}`)
+    console.log(`in reports slug is ${slug}`)
 
 }
 const curUrl = new URL(Astro.request.url);
 console.log(`in slug file, url is ${curUrl}`);
 // 2. Query for the entry directly using the request slug
-const entry = await getEntryBySlug("docs", slug);
+const entry = await getEntryBySlug("legacyReports", slug);
 // 3. Redirect if the entry does not exist
 if (entry === undefined) {
-    console.log(`failed to find ${'monsters/' + slug}`)
+    console.log(`failed to find ${slug}`)
     return Astro.redirect("/404");
 }
 // 4. (Optional) Render the entry to HTML in the template
 const { Content } = await entry.render();
+const navsections = ['reports', 'monsters'];
 ---
-<MarkdownPostLayout frontmatter={entry.data}>
+<MarkdownPostLayout frontmatter={entry.data} navsections={navsections.join(',')}>
     <Content />
 </MarkdownPostLayout>
