--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,10 +1,16 @@
 ---
-const {frontmatter} = Astro.props;
+export interface Props {
+    frontmatter: any,
+    navsections?: string;
+
+}
+
+const { frontmatter, navsections } = Astro.props;
 import Layout from './Layout.astro';
 const title = frontmatter.title;
 ---
 
-<Layout title={title}>
+<Layout title={title} navsections={navsections? navsections : ''} >
     <slot />
 </Layout>
 
