--- a/src/components/h_flexbox.astro
+++ b/src/components/h_flexbox.astro
@@ -2,6 +2,17 @@
 
 
 ---
-<div style="display: flex; flex-direction: row; flex-wrap: wrap; width: 100%; box-sizing: content-box; ">
+<style>
+    div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        box-sizing: content-box;
+        align-items: center;
+        justify-content: center;
+    }
+</style>
+<div >
     <slot></slot>
 </div>
