--- a/packages/web/layouts/index.html
+++ b/packages/web/layouts/index.html
@@ -2,13 +2,13 @@
 <section class="section container-fluid mt-n3 pb-3">
   <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
-      <h1 class="mt-0">{{ .Title }}</h1>
-    </div>
-    <div class="col-lg-9 col-xl-8 text-center">
-      <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/" role="button">{{ i18n "get-started" }}</a>
-      <p class="meta">Open-source MIT Licensed. <a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON "/package.json" }}{{ $data.version }}</a></p>
-    </div>
+      <div id="title" class="astro-J7PV25F6">
+        <h2 class="astro-J7PV25F6">Why Another Evony Tips Site</h2>
+        <h3 class="astro-J7PV25F6">Tips for Budget Gamers</h3>
+      </div>
+      <div id="first" class="astro-J7PV25F6">
+        {{- .Content -}}
+      </div>
   </div>
 </section>
 {{ end }}
@@ -19,30 +19,31 @@
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
-          <h2 class="h4">Security aware</h2>
-          <p>Get A+ scores on <a href="https://observatory.mozilla.org/analyze/doks.netlify.app">Mozilla Observatory</a> out of the box. Easily change the default Security Headers to suit your needs.</p>
+          <h2 class="h4">Learn More About Generals</h2>
+          <p>For information on picking your first pairs of generals, click <a href="/generals/" class="astro-J7PV25F6">here</a>.</p>
         </div>
         <div class="col-lg-5">
-          <h2 class="h4">Fast by default ⚡️</h2>
-          <p>Get 100 scores on <a href="https://googlechrome.github.io/lighthouse/viewer/?gist=59aafe464a68f8bc30b8e9a636d5b053">Google Lighthouse</a> by default. Doks removes unused css, prefetches links, and lazy loads images.</p>
+          <h2 class="h4">Learn More About
+            Server Vs Server</h2>
+          <p>For information on participating in the every other week Server versus Server event, click <a href="/svs/" class="astro-J7PV25F6">here</a>.</p>
         </div>
         <div class="col-lg-5">
-          <h2 class="h4">SEO-ready</h2>
-          <p>Use sensible defaults for structured data, open graph, and Twitter cards. Or easily change the SEO settings to your liking.</p>
+          <h2 class="h4">Reference</h2>
+          <p>Boring but sometimes useful reference material that will help the other sections make sense.</p>
         </div>
       </div>
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
-          <h2 class="h4">Full text search</h2>
-          <p>Search your Doks site with FlexSearch. Easily customize index settings and search options to your liking.</p>
+          <h2 class="h4">Monsters</h2>
+          <p>Learn about Monster hunting.</p>
         </div>
         <div class="col-lg-5">
-          <h2 class="h4">Page layouts</h2>
-          <p>Build pages with a landing page, blog, or documentation layout. Add custom sections and components to suit your needs.</p>
+          <h2 class="h4"></h2>
+          <p></p>
         </div>
         <div class="col-lg-5">
-          <h2 class="h4">Dark mode</h2>
-          <p>Switch to a low-light UI with the click of a button. Change colors with variables to match your branding.</p>
+          <h2 class="h4"></h2>
+          <p></p>
         </div>
       </div>
     </div>
@@ -54,7 +55,7 @@
 <section class="section section-sm container-fluid">
   <div class="row justify-content-center text-center">
     <div class="col-lg-9">
-      {{- .Content -}}
+
     </div>
   </div>
 </section>
