this displays the demo code correctly

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,7 +11,7 @@ governing permissions and limitations under the License.
 */
 
 /* import the global stylesheets */
-@import "@cloudscape-design/global-styles/index.css"
+@import "@cloudscape-design/global-styles/index.css";
 
 
 sp-theme {
