--- a/src/components/SPTable.astro
+++ b/src/components/SPTable.astro
@@ -1,4 +1,5 @@
 ---
+import {CompareMayors} from './mayors';
 
 export interface Props {
   csv: string;
@@ -14,9 +15,7 @@ console.log(`url is ${csvUrl}`);
 
 ---
 <script >
-    import '@spectrum-web-components/table/elements.js';
-    import {CompareMayors} from './mayors';
 </script>
-<compare-mayors dataurl={csvUrl}>
+<CompareMayors dataurl={csvUrl} client:only>
     <slot></slot>
-</compare-mayors>
+</CompareMayors>
