correct path to files, slug seems to have the full path from root

--- a/src/components/DirectoryList.astro
+++ b/src/components/DirectoryList.astro
@@ -41,6 +41,6 @@ slug is {slug}<br/>
 
 <CardGrid stagger>
   { searchPages.map((p) => (
-    <LinkCard href={'../'.concat(p.slug)} title={p.data.title} description={p.data.description}/>
+    <LinkCard href={'/'.concat(p.slug)} title={p.data.title} description={p.data.description}/>
   ))}
 </CardGrid>
