--- a/src/components/BlazonSet.astro
+++ b/src/components/BlazonSet.astro
@@ -7,7 +7,7 @@ import {blazonTypes, blazonSet} from '../schemas/evonySchemas';
 const { setId } = Astro.props;
 if(setId === null || setId === undefined || setId.length <= 0) {
     console.error(`bogus setId`);
-    exit(1)
+    return Astro.redirect("/404");
 }
 const entry = await getEntry('blazons', setId);
 if (entry === undefined) {
